--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GradPortfolio">
-        <activity android:name=".View.DatePicker"></activity>
-        <activity android:name=".View.SignUp" />
+
         <activity
             android:name=".View.SplashActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/SplashTheme">
+            android:theme="@style/SplashTheme"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,6 +27,7 @@
         </activity>
         <activity android:name=".View.MainActivity" />
         <activity android:name=".View.ProductDetail"/>
+        <activity android:name=".Model.Category_1" />
     </application>
 
 </manifest>
