--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
 
         <activity android:name=".View.MainActivity" />
         <activity android:name=".View.ProductDetail"/>
-        <activity android:name=".Model.Category_1" />
+        <activity android:name=".Model.CategoryData1" />
 
     </application>
 
